--- a/Без названия-7.html
+++ b/Без названия-7.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     <section>
-        <p>Всем привет! Добро пожаловать в мой блог. Совсем недавно я поняла,что хочу заниматься самообразованием и учиться тому,что мне действительно интересно. Конечно, я и понятия не имела,как воплотить свои планы в жизнь, но я нашла <a href="https://www.google.ru/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=2ahUKEwizx63d2JDjAhU-wsQBHSMEDIwQFjACegQIARAB&url=https%3A%2F%2F4brain.ru%2Fsamoobrazovanie%2F&usg=AOvVaw1CJgdqJc6BrlxGXr6jI6Yq">. Я поставила перед собой цель - стать лучше. Давайте вместе окунаться с головой в самообразование!</a>
+        <p>Всем привет! Добро пожаловать в мой блог. Совсем недавно я поняла,что хочу заниматься самообразованием и учиться тому,что мне действительно интересно. Конечно, я и понятия не имела,как воплотить свои планы в жизнь, но я нашла <a href="https://www.google.ru/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=2ahUKEwizx63d2JDjAhU-wsQBHSMEDIwQFjACegQIARAB&url=https%3A%2F%2F4brain.ru%2Fsamoobrazovanie%2F&usg=AOvVaw1CJgdqJc6BrlxGXr6jI6Yq">сайт, который дал старт моим начинаниям</a>. Я поставила перед собой цель - стать лучше. Давайте вместе окунемся в мир знаний!
         </p>
         </section>
     </main>
